HHH-6028 - Remove o.h.classic.Session/Validatable